--- a/docs/assets/css/exastics.css
+++ b/docs/assets/css/exastics.css
@@ -5,10 +5,11 @@
 
 .exastics-chart-container {
     border: 1px solid #000000;
-    width:500px;
-    height:350px;
+    width: 800px;
+    height: 350px;
     margin-top: 10px;
     margin-bottom: 10px;
+    padding-bottom: 50px;
 }
 
 .exastics-chart-caption {
